# antpm

./: .gitignore  .travis.yml  GantMonitor.glade  GantMonitor.py  Makefile  Makefile~  README  README.rst  antdefs.h  antlib.c  antlib.c~  auth405  gant  gant.c  gant.c.orig  gant.c~  output  patch_20090124.diff
.github/workflows/: cmake.yml  coverity.yml  macos.yml  qemu.yml
debian/: .gitignore  antpm.manpages  changelog  control  copyright  gant.substvars  install  rules
debian/patches/: debian-changes-0:20090124-1  safe-clean.patch  series
docs/: PROTOCOL_HELP.txt  maintainer.txt  notes.txt
scripts/: 80-ant-stick.rules  antpm-clean-db  com.github.ralovich.antpm.metainfo.xml  conf-for-clang.sh  coverity_scan_script.sh  deb  do_cov.sh  make-changelog  make-tarball  origsrc-file-list  snaphot-deb  travis_osx.sh  travis_trusty.sh  travis_windows.cmd  verify-orig  vs2008-64.bat  vs2008.bat  vs2012-64.bat
scripts/archlinux/: PKGBUILD
scripts/debian/: antpm.manpages  changelog  control  copyright  rules
scripts/gentoo/: Manifest  antpm-9999.ebuild
src/: ANTPM_VERSION.inc  AntChannel.cpp  AntChannel.hpp  AntFr310XT.cpp  AntFr310XT.hpp  AntFr405.cpp  AntFr405.hpp  AntMessage.cpp  AntMessage.hpp  AntMessenger.cpp  AntMessenger.hpp  CMakeLists.txt  DeviceSettings.cpp  DeviceSettings.hpp  FIT.cpp  FIT.hpp  GPX.cpp  GPX.hpp  GarminConvert.cpp  GarminConvert.hpp  GarminPacketIntf.cpp  GarminPacketIntf.hpp  LazySingleton.hpp  Log.hpp  Serial.cpp  Serial.hpp  SerialTty.cpp  SerialTty.hpp  SerialUsb.cpp  SerialUsb.hpp  SmartPtrFwd.hpp  VERSION  antdefs.cpp  antdefs.hpp  antpm-downloader.1  antpm-downloader.cpp  antpm-fit2gpx.1  antpm-fit2gpx.cpp  antpm-usbmon2ant.1  antpm-usbmon2ant.cpp  (+5 more)
src/cmake/: FindLIBUSB.cmake  Findlibusb-1.0.cmake
src/gant/: CMakeLists.txt  Makefile  antdefs.h  antlib.c  antlib.h  gant.1  gant.c
src/gant/tests/: CMakeLists.txt
src/garmintools/: CMakeLists.txt  byte_util.c  command.c  config.h  datatype.c  garmin.h  pack.c  packet_id.c  print.c  protocol.c  run.c  scan.c  symbol_name.c  unpack.c  usb_comm.c
src/tests/: 0046.fit  2012_12_21_antagent1.usbmon  CMakeLists.txt  config.ini  lq1.cpp  sm1.cpp  testDateTime.cpp  testDeviceSettings.cpp  testReplay.cpp
src/ui/: Makefile  antpm-monitor
